@@ -2115,6 +2115,12 @@ sec.~\ref{sec:autonode} for how to install and configure it.
 
 %------------------------------------------------------------------------------
 
+\subsection{EoE Statistics}
+
+\lstinputlisting[basicstyle=\ttfamily\footnotesize]{external/ethercat_eoe}
+
+%------------------------------------------------------------------------------
+
 \subsection{File-Access over EtherCAT}
 
 \lstinputlisting[basicstyle=\ttfamily\footnotesize]{external/ethercat_foe_read}
